force-app/main/default/objects/Goal__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>