force-app/main/default/objects/Goal__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <label>Reviewer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>