force-app/main/default/objects/Goal__c/fields/Reviewer_Title__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Title__c</fullName>
    <label>Reviewer Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>