force-app/main/default/objects/Goal__c/fields/Risk_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Example__c</fullName>
    <label>Risk Management Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>