force-app/main/default/objects/Goal__c/fields/Stakeholder_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Management_Example__c</fullName>
    <label>Stakeholder Management Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>