force-app/main/default/objects/Goal__c/fields/Stakeholder_Management_Rating__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Management_Rating__c</fullName>
    <label>Stakeholder Management Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>