force-app/main/default/objects/Goal__c/fields/Stakeholder_Satisfaction_Example__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Satisfaction_Example__c</fullName>
    <label>Stakeholder Satisfaction Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>