force-app/main/default/objects/Goal__c/fields/Stakeholder_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Satisfaction_Rating__c</fullName>
    <label>Stakeholder Satisfaction Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>