force-app/main/default/objects/Goal__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>KRA Inreview</fullName>
            </value>
            <value>
                <fullName>KRA Completed</fullName>
            </value>
            <value>
                <fullName>Pulse Submitted</fullName>
            </value>
            <value>
                <fullName>Pulse Requested</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>HR KRA Completed</fullName>
            </value>
            <value>
                <fullName>Completed - OnTime</fullName>
                <isActive>false</isActive>
                <label>Completed - OnTime</label>
            </value>
            <value>
                <fullName>Completed - PostTime</fullName>
                <isActive>false</isActive>
                <label>Completed - PostTime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>