force-app/main/default/objects/Goal__c/fields/Strategic_Work_Example__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Work_Example__c</fullName>
    <label>Strategic Work Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>