force-app/main/default/objects/Goal__c/fields/Strategic_Work_Rating__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Work_Rating__c</fullName>
    <label>Strategic Work Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>