force-app/main/default/objects/Goal__c/fields/Task_Management_Example__c.field-meta.xml
<CustomField>
    <fullName>Task_Management_Example__c</fullName>
    <label>Task Management Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>