force-app/main/default/objects/Goal__c/fields/Teamwork_Example__c.field-meta.xml
<CustomField>
    <fullName>Teamwork_Example__c</fullName>
    <label>Teamwork Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>