force-app/main/default/objects/Goal__c/fields/Teamwork_Rating__c.field-meta.xml
<CustomField>
    <fullName>Teamwork_Rating__c</fullName>
    <label>Teamwork Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>