force-app/main/default/objects/Goal__c/fields/Test_Case_Design_Execution_Example__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Design_Execution_Example__c</fullName>
    <label>Test Case Design and Execution Example</label>
    <type>TextArea</type>
</CustomField>