force-app/main/default/objects/Goal__c/fields/Test_Case_Design_Execution_Rating__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Design_Execution_Rating__c</fullName>
    <label>Test Case Design and Execution Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>