force-app/main/default/objects/Goal__c/fields/Testing_Example__c.field-meta.xml
<CustomField>
    <fullName>Testing_Example__c</fullName>
    <label>Testing Example</label>
    <type>TextArea</type>
</CustomField>