force-app/main/default/objects/Goal__c/fields/Testing_Rating__c.field-meta.xml
<CustomField>
    <fullName>Testing_Rating__c</fullName>
    <label>Testing Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>