force-app/main/default/objects/Goal__c/fields/Total_Goals_And_Result__c.field-meta.xml
<CustomField>
    <fullName>Total_Goals_And_Result__c</fullName>
    <label>Total Goals And Result</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>