force-app/main/default/objects/Goal__c/fields/Total_Strategic_Impact__c.field-meta.xml
<CustomField>
    <fullName>Total_Strategic_Impact__c</fullName>
    <label>Total Strategic Impact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>