force-app/main/default/objects/Goal__c/fields/Total_Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Total_Technical_Skills__c</fullName>
    <label>Total Technical Skills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>