force-app/main/default/objects/Goal__c/fields/Troubleshooting_Environment_Prep_Example__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Environment_Prep_Example__c</fullName>
    <label>Troubleshooting/Environment Prep Example</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>