force-app/main/default/objects/Goal__c/fields/Troubleshooting_Environment_Prep_Rating__c.field-meta.xml
<CustomField>
    <fullName>Troubleshooting_Environment_Prep_Rating__c</fullName>
    <label>Troubleshooting/Environment Prep Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>