force-app/main/default/objects/Goal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>KRA</fullName>
            </value>
            <value>
                <fullName>Org Level Goal</fullName>
            </value>
            <value>
                <fullName>Resource Role Level Goal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>