force-app/main/default/objects/Goal__c/fields/Understanding_Code_Example__c.field-meta.xml
<CustomField>
    <fullName>Understanding_Code_Example__c</fullName>
    <label>Understanding Code Example</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>