force-app/main/default/objects/Goal__c/fields/Understanding_Code_Rating__c.field-meta.xml
<CustomField>
    <fullName>Understanding_Code_Rating__c</fullName>
    <label>Understanding Code Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>