force-app/main/default/objects/Goal__c/fields/Work_Environment__c.field-meta.xml
<CustomField>
    <fullName>Work_Environment__c</fullName>
    <inlineHelpText>Comfort and safety in the workplace.
Clarity of goals and expectations.
Support from colleagues and management.</inlineHelpText>
    <label>Work Environment</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>