force-app/main/default/objects/Goal__c/fields/Work_Life_Balance__c.field-meta.xml
<CustomField>
    <fullName>Work_Life_Balance__c</fullName>
    <inlineHelpText>Ability to maintain a healthy work-life balance.
Frequency of working overtime or weekends.</inlineHelpText>
    <label>Work-Life Balance</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>