force-app/main/default/objects/Goal__c/recordTypes/checkin.recordType-meta.xml
<RecordType>
    <fullName>checkin</fullName>
    <active>true</active>
    <label>checkin</label>
</RecordType>