force-app/main/default/objects/Goal__c/recordTypes/KRA.recordType-meta.xml
<RecordType>
    <fullName>KRA</fullName>
    <active>true</active>
    <label>KRA</label>
</RecordType>