force-app/main/default/objects/Goal__c/recordTypes/pulse.recordType-meta.xml
<RecordType>
    <fullName>pulse</fullName>
    <active>true</active>
    <label>pulse</label>
</RecordType>