force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Goal_Name__c</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>is_Navigation_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>