force-app/main/default/objects/Goal__c/listViews/Check_In.listView-meta.xml
<ListView>
    <fullName>Check_In</fullName>
    <columns>NAME</columns>
    <columns>Goal_Name__c</columns>
    <columns>Check_In_By__c</columns>
    <columns>Resource__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.checkin</value>
    </filters>
    <label>Check In</label>
</ListView>