force-app/main/default/objects/Goal__c/listViews/Goals.listView-meta.xml
<ListView>
    <fullName>Goals</fullName>
    <columns>NAME</columns>
    <columns>Goal_Name__c</columns>
    <columns>Resource__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.Goal</value>
    </filters>
    <label>Goals (Goal)</label>
</ListView>