force-app/main/default/objects/Goal__c/listViews/KRA.listView-meta.xml
<ListView>
    <fullName>KRA</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Resource__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.KRA</value>
    </filters>
    <label>KRA</label>
</ListView>