force-app/main/default/objects/Goal__c/listViews/Pulse_Records.listView-meta.xml
<ListView>
    <fullName>Pulse_Records</fullName>
    <columns>NAME</columns>
    <columns>Check_In_By__c</columns>
    <columns>Resource__c</columns>
    <columns>Check_in_Date__c</columns>
    <columns>Fulfillment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Goal__c.pulse</value>
    </filters>
    <label>Pulse Records</label>
</ListView>